--- a/.gitignore
+++ b/.gitignore
@@ -398,7 +398,7 @@ ASALocalRun/
 
 
 # VS Code files for those working on multiple tools
-.vscode/*
+# .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
